Add test environment variables
With JUnit Pioneer. On Java 17+. 🤯