@@ -93,7 +93,11 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.1.2</version>
 				<configuration>
-					<argLine>--enable-preview</argLine>
+					<argLine>
+						--enable-preview
+						--add-opens java.base/java.util=ALL-UNNAMED
+						--add-opens java.base/java.lang=ALL-UNNAMED
+					</argLine>
 					<properties>
 						<configurationParameters>
 							junit.jupiter.execution.parallel.enabled=true
